@@ -139,6 +139,10 @@ body:not(.single):not(.page) {
 	header.header-main, footer.footer-main, .top-nav, .content-feed {
 		padding-left: @pad;
 		padding-right: @pad;
+		@media (max-width: 740px) {
+			padding-left: 15px;
+			padding-right: 15px;
+		}
 	}
 }
 
