@@ -2,7 +2,7 @@
 Theme Name: 	amani
 Theme URI: 		https://bekento.space/amani
 Description: 	Authentic WordPress theme focused on content with amazing user experience
-Version: 		6.190501
+Version: 		10.190508
 Author: 			Bekento
 Author URI: 	https://bekento.space/
 License: 		GNU General Public License version 3.0
